--- a/js/Dockerfile
+++ b/js/Dockerfile
@@ -2,7 +2,7 @@ FROM josephsortino/nodenpmchrome
 
 WORKDIR /usr/src/app
 
-RUN curl -sL https://deb.nodesource.com/setup_8.x | -E bash - \
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - \
     && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists
 
